# docs/swagger.json
@@ -2712,7 +2712,6 @@
                 "tags": [
                     "notification"
                 ],
-                "operationId": "createNotyForAllUsers",
                 "parameters": [
                     {
                         "description": "notification",
@@ -2906,6 +2905,72 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/domain.Notification"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "security": [
+                    {
+                        "User_Auth": []
+                    }
+                ],
+                "description": "update  notification",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "notification"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "notification id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "notification",
+                        "name": "input",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/v1.Notification"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/v1.okResponse"
                         }
                     },
                     "400": {
@@ -4423,16 +4488,12 @@
         },
         "domain.Notification": {
             "type": "object",
-            "required": [
-                "text",
-                "title"
-            ],
             "properties": {
                 "date": {
                     "type": "number"
                 },
                 "getters": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "id": {
                     "type": "integer"
@@ -4446,6 +4507,9 @@
                 "link": {
                     "type": "string"
                 },
+                "logo": {
+                    "type": "string"
+                },
                 "partner_id": {
                     "type": "integer"
                 },
@@ -4453,19 +4517,22 @@
                     "type": "string"
                 },
                 "status": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "text": {
                     "type": "string"
                 },
                 "time": {
-                    "type": "number"
+                    "type": "integer"
                 },
                 "title": {
                     "type": "string"
                 },
                 "users": {
-                    "$ref": "#/definitions/domain.GetterList"
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.GetterList"
+                    }
                 }
             }
         },
@@ -4781,7 +4848,7 @@
                     "type": "string"
                 },
                 "time": {
-                    "type": "number"
+                    "type": "integer"
                 },
                 "title": {
                     "type": "string"
